--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -115,3 +115,7 @@ span.navbar-toggler-icon {
         background-color: $color-primary-light;
     }
 }
+
+.margin-bottom-30 {
+    margin-bottom: 3rem;
+}
