--- a/sass/pages/home/_event-section.scss
+++ b/sass/pages/home/_event-section.scss
@@ -115,3 +115,9 @@
         }
     }
 }
+
+@media (max-width: 576px) {
+    .upcoming-event-details-container {
+        
+    }
+}
